website/versioned_docs/version-2.5.x/reference/subsystems/shellcheck.mdx
---
title: shellcheck
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A linter for shell scripts.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[shellcheck]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]shellcheck-skip`}
  env_repr="PANTS_SHELLCHECK_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use Shellcheck when running `./pants lint`.
</Option>

### `args`

<Option
  cli_repr={`--shellcheck-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_SHELLCHECK_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to Shellcheck, e.g. `--shellcheck-args='-e
  SC20529'`.&#x27;
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--shellcheck-version=<str>`}
  env_repr="PANTS_SHELLCHECK_VERSION"
  default_repr={`v0.7.1`}
>
  Use this version of shellcheck.
</Option>

### `known_versions`

<Option
  cli_repr={`--shellcheck-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SHELLCHECK_KNOWN_VERSIONS'
  default_repr={`[\n  "v0.7.1|darwin|b080c3b659f7286e27004aa33759664d91e15ef2498ac709a452445d47e3ac23|1348272",\n  "v0.7.1|linux|64f17152d96d7ec261ad3086ed42d18232fcb65148b44571b564d688269d36c8|1443836"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

- `version` is the version string
- `platform` is one of [darwin,linux],
- `sha256` is the 64-character hex representation of the expected sha256

```
digest of the download file, as emitted by `shasum -a 256`
```

- `length` is the expected length of the download file in bytes, as emmitted by

```
`wc -c`
```

E.g., `3.1.2|darwin|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `url_template`

<Option
  cli_repr={`--shellcheck-url-template=<str>`}
  env_repr='PANTS_SHELLCHECK_URL_TEMPLATE'
  default_repr={`https://github.com/koalaman/shellcheck/releases/download/{version}/shellcheck-{version}.{platform}.x86_64.tar.xz`}
>
URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a file:// URL.

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--shellcheck-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_SHELLCHECK_URL_PLATFORM_MAPPING'
  default_repr={`{\n  "darwin": "darwin",\n  "linux": "linux"\n}`}
>
A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"darwin": "apple-darwin", "linux": "unknown-linux"}, and run Pants on Linux, then `&#123;platform&#125;` will be substituted in the --url-template option with unknown-linux.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]shellcheck-config-discovery`}
  env_repr="PANTS_SHELLCHECK_CONFIG_DISCOVERY"
  default_repr={`True`}
>
  If true, Pants will include all relevant `.shellcheckrc` and `shellcheckrc`
  files during runs. See https://www.mankier.com/1/shellcheck#RC_Files for where
  these can be located.
</Option>

## Deprecated options

None

</span>
